:Date: $Date$
:Revision: $Revision$
:Web site: https://docutils.sourceforge.io/
:Copyright: This document has been placed in the public domain.


This document summarizes the major changes in recent and upcoming releases.
For a more detailed list of changes, please see the Docutils `HISTORY`_.

.. contents::

Future changes
==============

Drop support for Python 2.7, 3.5, and 3.6.

* `html5` writer:

  - Stop setting the "footnote-reference" class value for footnote
    references. Since 0.18, you can use the CSS selector
    ``[role="doc-noteref"]`` instead of ``.footnote-reference``
    (see minimal.css for examples).

  - Remove option "embed_images" (obsoleted by "image_loading_").

    .. _image_loading: docs/user/config.html#image-loading

  - Move attribution behind the blockquote to comply with the `"living
    standard"`__. (HTML5__ allows <cite> elements inside a blockquote.)

    __ https://html.spec.whatwg.org/#the-blockquote-element
    __ https://www.w3.org/TR/2014/REC-html5-20141028/grouping-content.html
       #the-blockquote-element

* `latex2e` writer:

  - Change default of use_latex_citations_ setting to True.

  - Change default of legacy_column_widths_ setting to False.

  - Remove ``use_verbatim_when_possible`` setting
    (use literal_block_env_: verbatim).

* Remove the "rawsource" attribute and argument from nodes.Text:
  we store the null-escaped text in Text nodes since 0.16 so there is no
  additional information in the rawsource.

* Move math format conversion from docutils/utils/math (called from
  docutils/writers/_html_base.py) to a transform__.

  __ docs/ref/transforms.html

* The default HTML writer "html" with frontend ``rst2html.py`` may change
  from "html4css1" to "html5".

  Use ``get_writer_by_name('html')`` or the rst2html.py_ front end, if you
  want the output to be up-to-date automatically.

  Use the "html4" writer or ``rst2html4.py``, if you depend on