@@ -133,24 +133,6 @@ print("hello world")
         # raise AssertionError if data is not an unicode string
         self.assertRaises(AssertionError, uniinput.decode, b'ja')
 
-    def test_deprecation_warning(self):
-        # Test deprecation warning of 'U' universal newlines mode.
-        # TODO remove with 3.4 support end
-
-        # Arrange
-        import warnings
-        with warnings.catch_warnings(record=True) as w:
-            # Cause all warnings to always be triggered
-            warnings.simplefilter("always", DeprecationWarning)
-
-            # Act
-            # Trigger a warning?
-            io.FileInput(source_path='data/include.txt').close()
-
-            # Assert
-            self.assertEqual(len(w), 0, "Expected no warnings, got %s" %
-                             list(v.category for v in w))
-
 
 class OutputTests(unittest.TestCase):
 
